test/syntax/invalid/duplicate-default.ts
// expect: VZG2001
switch (value) { default: first(); default: second(); }
